# gosset-sdk

./: .gitignore  CHANGES.md  CLIENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MIGRATION.md  PUBLISHING.md  README.md  get-token-standalone.py  pyproject.toml  requirements-agents.txt  requirements.txt  setup.py  test_client_import.py
.github/workflows/: README.md  publish-to-pypi.yml  release.yml  test.yml
examples/: CLIENT_USAGE.md  README.md  biotech_agent.py  client_demo.py  client_example.py  client_minimal.py
gosset/: __init__.py  auth.py  cli.py  client.py
gosset_sdk/: __init__.py  auth.py  cli.py  client.py
tests/: __init__.py  test_client.py  test_client_import.py  test_install.py
