[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gosset"
version = "0.1.1"
description = "Python SDK for Gosset Drug Database - Access 100,000+ drug assets programmatically"
readme = "README.md"
authors = [
    { name = "Gosset", email = "support@gosset.ai" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["gosset", "drug-database", "biotech", "pharmaceutical", "mcp", "openai-agents"]

dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
agents = [
    "openai-agents>=0.1.0",
    "python-dotenv>=0.19.0",
]

[project.urls]
Homepage = "https://gosset.ai"
Documentation = "https://main.gosset-docs.pages.dev"
Repository = "https://github.com/gosset/gosset-sdk"
"Bug Tracker" = "https://github.com/gosset/gosset-sdk/issues"

[project.scripts]
gosset = "gosset.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gosset*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

